# verus-proof-synthesis

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README-artifact-evaluation.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-leaderboard.yml
autoverus/: README.md  config-artifact-openai.json  generation.py  houdini.py  infer.py  inter_generation.py  inter_main.py  lynette.py  main.py  refinement.py  utils.py  utils_inter.py  verify.py  verify.sh  veval.py
autoverus/lemmas/: seq_subrange_ascend.rs  seq_take_all.rs  seq_take_ascend.rs  vec_push.rs  vec_remove.rs
benchmarks/: README.md
benchmarks/VeruSAGE-Bench/: README.md  (+1 more)
code/: README.md  config-artifact-azure.json  infer.py  lynette.py  utils_inter.py  verify.py  veval.py
leaderboard/: .gitignore  README.md  about.html  index.html  submit.html
utils/lynette/source/lynette/: Cargo.toml
utils/lynette/source/lynette/src/: additions.rs  code.rs  deghost.rs  func.rs  lib.rs  main.rs  unimpl.rs  utils.rs
utils/lynette/source/lynette/src/benchmark_gen/: README.md  TODOS.md  benchmark_utils.rs  clean_uses.rs  erase_ghost.rs  mod.rs  remove_helper_lemma.rs  reorder.rs
utils/lynette/source/lynette/src/merge/: exprs.rs  is_ghost.rs  merge.rs  mod.rs
utils/lynette/source/lynette/tests/: additions_tests_obsolete.rs  verus_cheat_examples.rs
verusage/: ARCHITECTURE.md  README.md  agent_framework.py  global_config.py  houdini.py  infer.py  llm_utils.py  lynette.py  main.py  output_format.py  repair_runner.py  run_all_batches.py  run_batch.py  utils.py  veval.py
(+3106 files in other folders)
