[package]
name = "lynette"
version = "0.0.0"
edition = "2018"
publish = false
rust-version = "1.62"

[dependencies]
serde_json = "1.0"
colored = "1.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = "1.0"
quote = "1.0.36"
tempfile = "3.10.1"
clap = { version = "4.3.11", features = ["derive"] }
once_cell = "1.8.0"
syn_verus = { git = "https://github.com/verus-lang/verus", version = "2.0.96", features = ["full", "extra-traits", "visit-mut"] }
prettyplease_verus = { git = "https://github.com/verus-lang/verus", version = "0.2.29" }
